--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -1,10 +1,16 @@
 /**
  * Main Style Sheet
- * Site Name
+ * GreenTopEnergy
  *
  * Copyright (c) 2015. by Way2CU, http://way2cu.com
- * Authors:
+ * Authors: Mladen Mijatov
  */
+
+
+@import "header.less";
+@import "content.less";
+@import "footer.less";
+
 
 body {
 	background-color: white;
