Moved footer to separate file.

--- a/site/templates/home.xml
+++ b/site/templates/home.xml
@@ -18,9 +18,7 @@
 			</cms:template>
 
 			<!-- Footer -->
-			<footer>
-				<cms:template file="stock/copyright.xml"/>
-			</footer>
+			<cms:template file="parts/footer.xml"/>
 		</body>
 	</html>
 </document>
