--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -18,6 +18,7 @@
 @color_header: #1e477a;
 @color_special: #5cc3d9;
 @color_text: #7f8c8d;
+@radius: 8px;
 
 @import "header.less";
 @import "content.less";
