--- a/site/templates/home.xml
+++ b/site/templates/home.xml
@@ -10,8 +10,10 @@
 		</head>
 
 		<body class="$language_rtl ? 'rtl' : 'ltr'" cms:eval="class">
+			<cms:svg file="../images/site-sprite.svg"/>
 			<!-- Header -->
 			<cms:template file="stock/header_generic.xml">
+				<param name="fixed" value="fixed"/>
 				<param name="logo" value="logo.svg"/>
 				<param name="menu" value="parts/main_menu.xml"/>
 				<param name="phone" value="phone_number"/>
