--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -39,7 +39,10 @@ nav#main > ul > li {
 
 nav#main > ul > li  a {
 	display: inline-block;
-	padding: 15px;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	text-decoration: none;
 	color: @color_header;
 	transition: all 0.3s;
