Template: added param for phone icon

--- a/site/templates/home.xml
+++ b/site/templates/home.xml
@@ -17,6 +17,7 @@
 				<param name="logo" value="logo.svg"/>
 				<param name="menu" value="parts/main_menu.xml"/>
 				<param name="phone" value="phone_number"/>
+				<param name="phone_sprite_icon" value="site/images/site-sprite.svg#icon-phoneicon">
 			</cms:template>
 
 			<!-- Footer -->
