--- a/site/templates/home.xml
+++ b/site/templates/home.xml
@@ -10,7 +10,7 @@
 		</head>
 
 		<body class="$language_rtl ? 'rtl' : 'ltr'" cms:eval="class">
-			<cms:svg file="images/site-sprite.svg"/>
+			<cms:svg file="site-sprite.svg"/>
 
 			<!-- Header -->
 			<cms:template file="stock/header_generic.xml">
