--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -6,7 +6,7 @@
  * Authors: Mladen Mijatov
  */
 
-header.stock.generic.fixed {
+header {
 	text-align:  center;
 	padding-top:  5px;
 	padding-bottom:  5px;
@@ -14,22 +14,24 @@ header.stock.generic.fixed {
 	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
 }
 
-header.stock.generic.fixed a.logo {
-	vertical-align: middle;
+header a.logo {
 	width:  163px;
 	height: 40px;
+	vertical-align: middle;
 }
 
 nav#main {
-	vertical-align:  middle;
 	margin-left: 20px;
 	margin-right: 20px;
+	vertical-align:  middle;
 }
 
 nav#main ul {
-	list-style-type: none;
 	margin: 0px;
 	padding: 0px;
+
+	list-style-type: none;
+	list-style-image: none;
 }
 
 nav#main > ul > li {
@@ -54,7 +56,7 @@ nav#main > ul > li a:hover {
 
 nav#main > ul > li:last-of-type  a {
 	border: 1px solid @color_special;
-	border-radius: @radius;	
+	border-radius: @button_border_radius;	
 	color: @color_special;
 	transition: all 0.3s;
 }
@@ -65,34 +67,37 @@ nav#main > ul >  li:last-of-type  a:hover {
 
 nav#main > ul > li:last-of-type > a svg {
 	display: inline-block;
-	vertical-align: middle;
-	margin-left:  10px;
 	width: 20px;
 	height: 20px;
+	vertical-align: middle;
+	margin-left:  10px;
 }
 
 nav#main ul li ul {
 	position: absolute;
-	text-align: left;
+	top: 100%;
+	left: 0px;
+	max-height: 0px;
+
+	visibility: hidden;
+	opacity: 0;
+
 	padding-top: 10px;
 	padding-bottom: 10px;
 	padding-left: 10px;
 	padding-right: 10px;
-	top: 100%;
-	left: 0px;
-	visibility: hidden;
-	opacity: 0;
-	max-height: 0px;
-	background-color: @color_header;
+
 	border: 1px solid @color_special;
+	background-color: @color_header;
 	transition: all 0.6s;
+
+	text-align: left;
 }
 
 nav#main ul li:hover ul {
 	visibility: visible;
 	opacity: 1;
 	max-height: 500px;
-
 }
 
 nav#main ul li ul li {
@@ -106,13 +111,9 @@ nav#main ul li ul li a {
 	color: @color_ac_text;
 }
 
-header.stock.generic.fixed a.phone {
-	text-decoration:  none;
+header a.phone {
 	color: @color_header;
 	font-weight: 700;
-	background-image:  url(../images/site-sprite.svg);
-	background-repeat:  no-repeat;
-	background-position: 0px 0px;
-	background-size: 30px 30px;
+	text-decoration:  none;
 }
 
