Footer: Updated copyright.

--- a/site/styles/footer.less
+++ b/site/styles/footer.less
@@ -8,3 +8,12 @@
 
 footer {
 }
+
+footer > div {
+	padding: 0px calc(~'(100% - 1200px) / 2');
+	background-color: black;
+}
+
+footer > div.menu {
+	background-color: white;
+}
