Header style: Use `em` units for SVG box size.

--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -21,8 +21,8 @@ header a.logo {
 }
 
 nav#main {
-	margin-left: 20px;
-	margin-right: 20px;
+	margin-left: 3em;
+	margin-right: 3em;
 	vertical-align:  middle;
 }
 
@@ -54,23 +54,28 @@ nav#main > ul > li a:hover {
 	color: @color_special;
 }
 
-nav#main > ul > li:last-of-type  a {
+nav#main > ul > li:last-of-type a {
+	margin-left: 2em;
 	border: 1px solid @color_special;
 	border-radius: @button_border_radius;	
 	color: @color_special;
-	transition: all 0.3s;
 }
 
-nav#main > ul >  li:last-of-type  a:hover {
-	border: 1px solid @color_header;
+nav#main > ul > li:last-of-type a:hover {
+	background-color: @color_special;
+	color: @color_ac_text;
 }
 
 nav#main > ul > li:last-of-type > a svg {
 	display: inline-block;
-	width: 20px;
-	height: 20px;
+	width: 1.5em;
+	height: 1.5em;
 	vertical-align: middle;
 	margin-left:  10px;
+}
+
+nav#main > ul > li:last-of-type > a:hover svg path {
+	fill: @color_ac_text;
 }
 
 nav#main ul li ul {
@@ -115,5 +120,14 @@ header a.phone {
 	color: @color_header;
 	font-weight: 700;
 	text-decoration:  none;
+}
+
+header a.phone svg {
+	display: inline-block;
+	vertical-align: middle;
+	width: 1.5em;
+	height: 1.5em;
+	margin-right: 5px;
+	margin-top: -0.2em;
 }
 
