Header style: Improved spacing.

--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -7,11 +7,11 @@
  */
 
 header {
-	text-align:  center;
-	padding-top:  5px;
-	padding-bottom:  5px;
+	padding: 10px 0px;
 	background-color: white;
 	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
+
+	text-align:  center;
 }
 
 header a.logo {
@@ -74,8 +74,8 @@ nav#main > ul > li:last-of-type > a svg {
 	margin-left:  10px;
 }
 
-nav#main > ul > li:last-of-type > a:hover svg path {
-	fill: @color_ac_text;
+nav#main > ul > li:last-of-type > a:hover svg {
+	fill: red;
 }
 
 nav#main ul li ul {
