Footer style: Made logo smaller.

--- a/site/styles/footer.less
+++ b/site/styles/footer.less
@@ -15,6 +15,12 @@ footer > div {
 	background-color: black;
 }
 
-footer > div.menu {
+footer div.menu {
 	background-color: white;
+	text-align: center;
+}
+
+footer div.menu img {
+	width: 50%;
+	margin-bottom: 3em;
 }
