--- a/site/styles/footer.less
+++ b/site/styles/footer.less
@@ -6,21 +6,83 @@
  * Authors: Mladen Mijatov
  */
 
-footer a {
-	color: white;
-}
-
 footer > div {
 	padding: 0px calc(~'(100% - 1200px) / 2');
 	background-color: black;
 }
 
+/**
+ * Menu container
+ */
 footer div.menu {
 	background-color: white;
+	background-image: url(../images/footer.jpg);
+	background-position: center bottom;
+	background-repeat: no-repeat;
+
 	text-align: center;
 }
 
 footer div.menu img {
 	width: 50%;
 	margin-bottom: 3em;
+}
+
+footer div.menu a {
+	display: inline-block;
+	padding: 10px 20px;
+
+	color: @color_header;
+	text-decoration: none;
+}
+
+footer a.phone {
+	border: 1px solid @color_header;
+	border-radius: @button_border_radius;
+
+	color: @color_header;
+	font-weight: 700;
+	text-decoration: none;
+}
+
+footer a.phone svg {
+	display: inline-block;
+	vertical-align: middle;
+	width: 1.5em;
+	height: 1.5em;
+	margin-right: 5px;
+	margin-top: -0.2em;
+}
+
+/**
+ * Lists
+ */
+footer div.menu ul {
+	display: inline-block;
+
+	margin: 0;
+	padding: 0;
+
+	list-style-type: none;
+	list-style-image: none;
+}
+
+footer div.menu ul li {
+	display: inline-block;
+}
+
+/**
+ * Policy menu
+ */
+nav#policy {
+	display: block;
+	margin-top: 2em;
+	margin-bottom: 2em;
+}
+
+/**
+ * Copyright
+ */
+footer div.copyright a {
+	color: white;
 }
