--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -117,3 +117,11 @@ header a.phone {
 	text-decoration:  none;
 }
 
+header a.phone svg {
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 5px;
+	width: 25px;
+	height: 25px;
+}
+
