--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -7,7 +7,6 @@
  */
 
 header {
-	padding: 10px 0px;
 	background-color: white;
 	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
 
@@ -15,15 +14,19 @@ header {
 }
 
 header a.logo {
-	width:  163px;
-	height: 40px;
 	vertical-align: middle;
+}
+
+
+header a.logo img{
+	width:  163px;
+	height: 40px;	
 }
 
 nav#main {
 	margin-left: 3em;
 	margin-right: 3em;
-	vertical-align:  middle;
+	vertical-align: middle;
 }
 
 nav#main ul {
@@ -32,6 +35,7 @@ nav#main ul {
 
 	list-style-type: none;
 	list-style-image: none;
+	line-height: 0;
 }
 
 nav#main > ul > li {
@@ -39,34 +43,37 @@ nav#main > ul > li {
 	position: relative;
 }
 
-nav#main > ul > li  a {
-	display: inline-block;
+nav#main > ul > li >  a {
+	display: block;
 	padding-left: 15px;
 	padding-right: 15px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 1.2em;
+	padding-bottom: 1.2em;
+	line-height: 2em;
 	text-decoration: none;
 	color: @color_header;
+	position: relative;
+	overflow: hidden;
 	transition: all 0.3s;
 }
 
-nav#main > ul > li a:hover {
-	color: @color_special;
+nav#main > ul > li >  a:hover {
+	background-color: @color_header;
+	color: @color_ac_text;
 }
 
-nav#main > ul > li:last-of-type a {
+nav#main > ul > li > a.login {
 	margin-left: 2em;
-	border: 1px solid @color_special;
 	border-radius: @button_border_radius;	
 	color: @color_special;
 }
 
-nav#main > ul > li:last-of-type a:hover {
+nav#main > ul > li > a.login:hover {
 	background-color: @color_special;
 	color: @color_ac_text;
 }
 
-nav#main > ul > li:last-of-type > a svg {
+nav#main > ul > li > a.login svg {
 	display: inline-block;
 	width: 1.5em;
 	height: 1.5em;
@@ -74,11 +81,8 @@ nav#main > ul > li:last-of-type > a svg {
 	margin-left:  10px;
 }
 
-nav#main > ul > li:last-of-type > a:hover svg {
-	fill: red;
-}
 
-nav#main ul li ul {
+nav#main ul li > ul {
 	position: absolute;
 	top: 100%;
 	left: 0px;
@@ -92,8 +96,8 @@ nav#main ul li ul {
 	padding-left: 10px;
 	padding-right: 10px;
 
-	border: 1px solid @color_special;
-	background-color: @color_header;
+	border: 1px solid @color_header;
+	background-color: @color_ac_text;
 	transition: all 0.6s;
 
 	text-align: left;
@@ -105,24 +109,43 @@ nav#main ul li:hover ul {
 	max-height: 500px;
 }
 
+nav#main > ul > li:hover > a {
+	background-color:  @color_header;
+	color: @color_ac_text;
+}
+
 nav#main ul li ul li {
 	display: block;
 	margin: 0px;
 	padding: 0px;
-	width: 300px;
+	width: 250px;
 }
 
 nav#main ul li ul li a {
-	color: @color_ac_text;
+	display: block;
+	text-decoration: none;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 5px;
+	padding-right: 5px;
+	line-height: 100%;
+	color: @color_header;
+	transition: all 0.3s;
 }
 
-header a.phone {
+nav#main ul li ul li:hover a {
+	background-color: @color_header;
+	color: @color_ac_text ;
+}
+
+header > a.phone {
+	vertical-align: middle;
 	color: @color_header;
 	font-weight: 700;
 	text-decoration:  none;
 }
 
-header a.phone svg {
+header > a.phone > svg {
 	display: inline-block;
 	vertical-align: middle;
 	width: 1.5em;
