Style: added home page slider section rules

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -5,3 +5,38 @@
  * Copyright (c) 2015. by Way2CU, http://way2cu.com
  * Authors: Mladen Mijatov
  */
+
+ /*
+    Home page	
+ */
+
+
+
+section.slider_container {
+	margin-top:  70px;
+	position: relative;
+	min-height:  600px;
+}
+
+div.package {
+	position:  absolute;
+	top: 0px;
+	left:  0px;
+	padding-top:  100px;
+	padding-right: calc(~'(50% - 600px)');
+	padding-left:  50%;
+	background-color: @color_ac_blue;
+	background-image: url(../images/slider-1-basic.jpg);
+	background-repeat: no-repeat;
+	background-position: calc(~'(50% - 480px)') top;
+	background-size: 900px 600px;
+	min-height:  500px;
+}
+
+div.package h2 , div.package p{
+	color: @color_ac_text;
+}
+
+div.package a.btn_buy {
+	
+}
