Style: added a.btn_buy style

--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -53,3 +53,25 @@ h5 {
 	font-family: Ultra;
 	font-weight: 400;
 }
+
+a.btn_buy {
+	display: inline-block;
+	vertical-align: middle;
+	text-decoration: none;
+	padding-top: 1.2em;
+	padding-bottom: 1.2em;
+	padding-left: 25px;
+	padding-right: 25px;
+	font-weight: 700;
+	color: @color_header;
+	background-color: @color_ac_text;
+	border-radius: @button_border_radius;
+}
+
+a.btn_buy svg {
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 10px;
+	width: 1.5em;
+	height: 1.5em;
+}
