Style: fixed background-images utl path

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -24,7 +24,7 @@ div.package {
 	padding-right: calc(~'(50% - 600px)');
 	padding-left:  50%;
 	background-color: @color_ac_blue;
-	background-image: url(../images/slider-1-basic.jpg);
+	background-image: url(../images/slides/basic.jpg);
 	background-repeat: no-repeat;
 	background-position: calc(~'(50% - 480px)') top;
 	background-size: 900px 600px;
