Style: Renamed btn_buy

--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -54,7 +54,7 @@ h5 {
 	font-weight: 400;
 }
 
-a.btn_buy {
+a.button_buy {
 	display: inline-block;
 	vertical-align: middle;
 	text-decoration: none;
@@ -68,7 +68,7 @@ a.btn_buy {
 	border-radius: @button_border_radius;
 }
 
-a.btn_buy svg {
+a.button_buy svg {
 	display: inline-block;
 	vertical-align: middle;
 	margin-right: 10px;
