Home template: Added features.

--- a/site/templates/home.xml
+++ b/site/templates/home.xml
@@ -13,6 +13,20 @@
 			<!-- Header -->
 			<cms:template file="parts/header.xml"/>
 
+			<!-- Features -->
+			<section id="features">
+				<h2><cms:text constant="title_features"/></h2>
+
+				<ul>
+					<cms:module
+						name="articles"
+						action="show_list"
+						text_id="features"
+						template="stock/features_generic.xml"
+						/>
+				</ul>
+			</section>
+
 			<!-- Footer -->
 			<cms:template file="parts/footer.xml"/>
 		</body>
