Styles: Added vertical spacing variable.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -40,3 +40,12 @@ div.package h2 , div.package p{
 div.package a.btn_buy {
 	
 }
+
+/**
+ * Features
+ */
+section#features {
+	padding: @vertical_spacing calc(~'(100% - 1200px) / 2');
+	background-color: @color_features;
+	color: @color_features_text;
+}
