--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -19,6 +19,7 @@
 @color_special: #5cc3d9;
 @color_text: #7f8c8d;
 
+@vertical_spacing: 30px;
 @button_border_radius: 5px;
 
 @import "header.less";
