--- a/site/styles/footer.less
+++ b/site/styles/footer.less
@@ -6,6 +6,10 @@
  * Authors: Mladen Mijatov
  */
 
+footer {
+	padding-top: @vertical_spacing;
+}
+
 footer > div {
 	padding: 0px calc(~'(100% - 1200px) / 2');
 	background-color: black;
@@ -25,7 +29,7 @@ footer div.menu {
 
 footer div.menu img {
 	width: 50%;
-	margin-bottom: 3em;
+	margin-bottom: @vertical_spacing;
 }
 
 footer div.menu a {
@@ -76,8 +80,8 @@ footer div.menu ul li {
  */
 nav#policy {
 	display: block;
-	margin-top: 2em;
-	margin-bottom: 2em;
+	margin-top: @vertical_spacing;
+	margin-bottom: @vertical_spacing;
 }
 
 /**
