Styles: Added small vertical spacing variable.

--- a/site/styles/footer.less
+++ b/site/styles/footer.less
@@ -29,7 +29,7 @@ footer div.menu {
 
 footer div.menu img {
 	width: 50%;
-	margin-bottom: @vertical_spacing;
+	margin-bottom: @small_vertical_spacing;
 }
 
 footer div.menu a {
@@ -80,8 +80,8 @@ footer div.menu ul li {
  */
 nav#policy {
 	display: block;
-	margin-top: @vertical_spacing;
-	margin-bottom: @vertical_spacing;
+	margin-top: @small_vertical_spacing;
+	margin-bottom: @small_vertical_spacing;
 }
 
 /**
