--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -19,7 +19,8 @@
 @color_special: #5cc3d9;
 @color_text: #7f8c8d;
 
-@vertical_spacing: 30px;
+@vertical_spacing: 50px;
+@small_vertical_spacing: 30px;
 @button_border_radius: 5px;
 
 @import "header.less";
