--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -61,8 +61,7 @@ a.button_buy {
 	display: inline-block;
 	vertical-align: middle;
 	text-decoration: none;
-	padding-top: 1.2em;
-	padding-bottom: 1.2em;
+	line-height: 4.5em;
 	padding-left: 25px;
 	padding-right: 25px;
 	font-weight: 700;
