Style: added margin top to a.button_buy

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -35,6 +35,10 @@ div.package h2 , div.package p{
 	color: @color_ac_text;
 }
 
+div.package a.button_buy {
+	margin-top:  1em;
+}
+
 /**
  * Features
  */
