Style: added hover values to a.button_buy

--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -68,6 +68,12 @@ a.button_buy {
 	color: @color_header;
 	background-color: @color_ac_text;
 	border-radius: @button_border_radius;
+	transition: all 0.3s;
+}
+
+a.button_buy:hover {
+	background-color:  @color_ac_green;
+	color: @color_ac_text ;
 }
 
 a.button_buy svg {
