--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -47,6 +47,27 @@ div.package a.button_buy {
 	margin-top:  1em;
 }
 
+/*
+   egauge article 
+*/
+
+section.egauge {
+	padding: @vertical_spacing calc(~'(100% - 1200px) / 2');	
+}
+
+section.egauge article {
+	display: block;
+	padding-right:  50%;
+	background-image: url(../images/eg3000.jpg);
+	background-repeat: no-repeat;
+	background-position: calc(~'(50% + 330px)') center;
+	background-size: auto 100%;
+}
+
+section.egauge article  a.button_readMore {
+	margin-top: 1em;
+}
+
 /**
  * Features
  */
