Style:Added a.button_readMore

--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -83,3 +83,23 @@ a.button_buy svg {
 	width: 1.5em;
 	height: 1.5em;
 }
+
+a.button_readMore {
+	display: inline-block;
+	vertical-align: middle;
+	text-decoration: none;
+	line-height: 3em;
+	padding-left: 25px;
+	padding-right: 25px;
+	font-weight: 700;
+	color: @color_header;
+	background-color: @color_ac_text;
+	border: 1px solid @color_header;
+	border-radius: @button_border_radius;
+	transition: all 0.3s;
+}
+
+a.button_readMore:hover {
+	background-color:  @color_ac_green;
+	color: @color_ac_text ;
+}
