Style: Added rules for section.video in home page

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -48,7 +48,7 @@ div.package a.button_buy {
 }
 
 /*
-   egauge article 
+  Home page egauge article 
 */
 
 section.egauge {
@@ -66,6 +66,27 @@ section.egauge article {
 
 section.egauge article  a.button_readMore {
 	margin-top: 1em;
+}
+
+/*
+   Home page video section
+*/
+
+section.video {
+	text-align: center;
+	padding: @vertical_spacing calc(~'(100% - 1200px) / 2');
+}
+
+section.video img {
+	display: inline-block;
+	vertical-align: middle;
+	margin-right:  10px;
+}
+
+section.video iframe {
+	display: inline-block;
+	vertical-align: middle;
+	margin-left: 10px;
 }
 
 /**
