--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -16,6 +16,31 @@ section.slider_container {
 	min-height:  600px;
 }
 
+div.controls {
+	position: absolute;
+	top: 50px;
+	left: 50%;
+	z-index: 100;
+}
+
+div.controls a {
+	display: inline-block;
+	vertical-align: top;
+	margin-right: 10px;
+	margin-left: 10px;
+	width: 15px;
+	height: 15px;
+	border: 2px solid @color_header;
+	border-radius: 50%;
+	box-shadow: 0px 0px 0px 1px @color_ac_text;
+	transition: 0.3s all;
+	cursor: pointer;	
+}
+
+div.controls a.active {
+	background-color: @color_ac_text;
+}
+
 div.package {
 	position:  absolute;
 	top: 0px;
