Style: fixed div.controls rules

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -16,14 +16,14 @@ section.slider_container {
 	min-height:  600px;
 }
 
-div.controls {
+section.slider_containe div.controls {
 	position: absolute;
 	top: 50px;
 	left: 50%;
 	z-index: 100;
 }
 
-div.controls a {
+section.slider_containe div.controls a {
 	display: inline-block;
 	vertical-align: top;
 	margin-right: 10px;
@@ -37,7 +37,7 @@ div.controls a {
 	cursor: pointer;	
 }
 
-div.controls a.active {
+section.slider_containe div.controls a.active {
 	background-color: @color_ac_text;
 }
 
