Footer style: Center aligned.

--- a/site/styles/footer.less
+++ b/site/styles/footer.less
@@ -13,6 +13,7 @@ footer {
 footer > div {
 	padding: 0px calc(~'(100% - 1200px) / 2');
 	background-color: black;
+	text-align: center;
 }
 
 /**
@@ -23,8 +24,6 @@ footer div.menu {
 	background-image: url(../images/footer.jpg);
 	background-position: center bottom;
 	background-repeat: no-repeat;
-
-	text-align: center;
 }
 
 footer div.menu img {
@@ -87,6 +86,10 @@ nav#policy {
 /**
  * Copyright
  */
+footer div.copyright {
+	display: inline-block;
+}
+
 footer div.copyright a {
 	color: white;
 }
