--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -11,6 +11,7 @@
  */
 section#packages {
 	position: relative;
+	margin-top: 70px;
 	min-height: 600px;
 }
 
@@ -20,25 +21,27 @@ section#packages div.package {
 	left:  0px;
 	min-height: 500px;
 	padding-top: 100px;
-	padding-right: calc(~'(50% - 600px)');
+	padding-right: calc(~'(50% - 550px)');
 	padding-left: 50%;
 
 	background-image: url(../images/slides/basic.jpg);
 	background-repeat: no-repeat;
-	background-position: calc(~'(50% - 480px)') top;
+	background-position: calc(~'(50% - 500px)') top;
 	background-size: auto 600px;
 
 	color: @color_ac_text;
+	opacity: 0;
+	visibility: hidden;
 }
 
-section.slider_containe div.controls {
+section#packages div.controls {
 	position: absolute;
 	top: 50px;
 	left: 50%;
 	z-index: 100;
 }
 
-section.slider_containe div.controls a {
+section#packages div.controls a {
 	display: inline-block;
 	vertical-align: top;
 	margin-right: 10px;
@@ -52,35 +55,22 @@ section.slider_containe div.controls a {
 	cursor: pointer;	
 }
 
-section.slider_containe div.controls a.active {
+section#packages div.controls a.active {
 	background-color: @color_ac_text;
 }
 
-div.package {
-	position:  absolute;
-	top: 0px;
-	left:  0px;
-	padding-top:  100px;
-	padding-right: calc(~'(50% - 550px)');
-	padding-left:  50%;
-	background-color: @color_ac_blue;
-	background-image: url(../images/slides/basic.jpg);
-	background-repeat: no-repeat;
-	background-position: calc(~'(50% - 500px)') top;
-	background-size: 900px 600px;
-	min-height:  500px;
-	opacity: 0;
-	visibility: hidden;
-	transition: all 0.3s;
-}
-
-div.package.visible {
+section#packages div.package.visible {
 	opacity: 1;
 	visibility: visible;
 }
 
 section#packages div.package {
 	/* add package specific colors */
+	background-color: @color_header;
+}
+
+section#packages div.package h2 {
+	color: @color_ac_text;
 }
 
 div.package a.button_buy {
