--- a/site/templates/home.xml
+++ b/site/templates/home.xml
@@ -25,7 +25,7 @@
 				<cms:module
 					name="shop"
 					action="show_item_list"
-					template="parts/package_slide.xml"
+					template="parts/package_slider.xml"
 					/>	
 			</section>
 
