Replaced class names with id names

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -81,11 +81,11 @@ div.package a.button_buy {
   Home page egauge article 
 */
 
-section.egauge {
+section#egauge {
 	padding: @vertical_spacing calc(~'(100% - 1200px) / 2');	
 }
 
-section.egauge article {
+section#egauge article {
 	display: block;
 	padding-right:  50%;
 	background-image: url(../images/eg3000.jpg);
@@ -94,7 +94,7 @@ section.egauge article {
 	background-size: auto 100%;
 }
 
-section.egauge article  a.button_readMore {
+section#egauge article  a.button_readMore {
 	margin-top: 1em;
 }
 
@@ -102,18 +102,18 @@ section.egauge article  a.button_readMore {
    Home page video section
 */
 
-section.video {
+section#video {
 	text-align: center;
 	padding: @vertical_spacing calc(~'(100% - 1200px) / 2');
 }
 
-section.video img {
+section#video img {
 	display: inline-block;
 	vertical-align: middle;
 	margin-right:  20px;
 }
 
-section.video iframe {
+section#video iframe {
 	display: inline-block;
 	vertical-align: middle;
 	margin-left: 20px;
