--- a/site/templates/home.xml
+++ b/site/templates/home.xml
@@ -30,7 +30,7 @@
 			</section>
 
 			<!-- egauge article -->
-			<section class="egauge">
+			<section id="egauge">
 				<cms:module
 					name="articles"
 					action="show"
@@ -40,7 +40,7 @@
 			</section>
 
 			<!-- video section -->
-			<section class="video">
+			<section id="video">
 				<h2><cms:text constant="video_section_title"/></h2>
 				<img 
 					src="_BASEURL.'/site/images/system.jpg'"  
