--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -73,7 +73,7 @@ section#packages div.controls a.active {
 	background-color: @color_ac_text;
 }
 
-div.package a.button_buy {
+section#packages div.package a.button_buy {
 	margin-top:  1em;
 }
 
@@ -94,7 +94,7 @@ section#egauge article {
 	background-size: auto 100%;
 }
 
-section#egauge article  a.button_readMore {
+section#egauge article  a.button_more {
 	margin-top: 1em;
 }
 
