Style: Renamed a.button_more

--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -84,7 +84,7 @@ a.button_buy svg {
 	height: 1.5em;
 }
 
-a.button_readMore {
+a.button_more{
 	display: inline-block;
 	vertical-align: middle;
 	text-decoration: none;
@@ -99,7 +99,7 @@ a.button_readMore {
 	transition: all 0.3s;
 }
 
-a.button_readMore:hover {
+a.button_more:hover {
 	background-color:  @color_ac_green;
 	color: @color_ac_text ;
 }
