--- a/site/templates/home.xml
+++ b/site/templates/home.xml
@@ -16,17 +16,12 @@
 
 			<!-- Packages slider -->
 			<section id="packages">
-				<div class="controls">
-					<a href="javascript:void(0)"></a>
-					<a href="javascript:void(0)"></a>
-					<a href="javascript:void(0)"></a>
-					<a href="javascript:void(0)"></a>
-				</div>
 				<cms:module
 					name="shop"
 					action="show_item_list"
 					template="parts/package_slider.xml"
 					/>	
+				<div class="controls"/>
 			</section>
 
 			<!-- egauge article -->
