Content style: Fixed Tal's way of writing CSS.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -16,9 +16,9 @@ section#packages {
 }
 
 section#packages div.package {
-	position:  absolute;
+	position: absolute;
 	top: 0px;
-	left:  0px;
+	left: 0px;
 	min-height: 500px;
 	padding-top: 100px;
 	padding-right: calc(~'(50% - 550px)');
@@ -73,34 +73,32 @@ section#packages div.controls a.active {
 }
 
 div.package a.button_buy {
-	margin-top:  1em;
+	margin-top: 1em;
 }
 
-/*
-  Home page egauge article
-*/
-
+/**
+ * Egauge article
+ */
 section#egauge {
 	padding: @vertical_spacing calc(~'(100% - 1200px) / 2');	
 }
 
 section#egauge article {
 	display: block;
-	padding-right:  50%;
+	padding-right: 50%;
 	background-image: url(../images/eg3000.jpg);
 	background-repeat: no-repeat;
 	background-position: calc(~'(50% + 330px)') center;
 	background-size: auto 100%;
 }
 
-section#egauge article  a.button_readMore {
+section#egauge article a.button_readMore {
 	margin-top: 1em;
 }
 
-/*
-   Home page video section
-*/
-
+/**
+ * Video section
+ */
 section#video {
 	text-align: center;
 	padding: @vertical_spacing calc(~'(100% - 1200px) / 2');
@@ -109,7 +107,7 @@ section#video {
 section#video img {
 	display: inline-block;
 	vertical-align: middle;
-	margin-right:  20px;
+	margin-right: 20px;
 }
 
 section#video iframe {
