Style: Added border to a.button_buy

--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -68,6 +68,7 @@ a.button_buy {
 	color: @color_header;
 	background-color: @color_ac_text;
 	border-radius: @button_border_radius;
+	border: 1px solid @color_ac_text;
 	transition: all 0.3s;
 }
 
