Fix Tal's lack of knowledge about self-closing XML tags.

--- a/site/templates/home.xml
+++ b/site/templates/home.xml
@@ -22,9 +22,7 @@
 					template="parts/package_slider.xml"
 					/>	
 
-				<div class="controls">
-	
-				</div>
+				<div class="controls"/>
 			</section>
 
 			<!-- egauge article -->
