--- a/site/templates/home.xml
+++ b/site/templates/home.xml
@@ -25,7 +25,7 @@
 				<div class="controls"/>
 			</section>
 
-			<!-- egauge article -->
+			<!-- Egauge -->
 			<section id="egauge">
 				<cms:module
 					name="articles"
@@ -35,7 +35,7 @@
 					/>
 			</section>
 
-			<!-- video section -->
+			<!-- Video -->
 			<section id="video">
 				<h2><cms:text constant="title_video"/></h2>
 				<img 
