--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -12,7 +12,7 @@
 section#packages {
 	position: relative;
 	margin-top: 70px;
-	min-height: 600px;
+	min-height: 500px;
 }
 
 section#packages div.package {
@@ -20,7 +20,7 @@ section#packages div.package {
 	width: 550px;
 	top: 0px;
 	left: 0px;
-	min-height: 500px;
+	min-height: 400px;
 	padding-top: 100px;
 	padding-right: calc(~'(50% - 550px)');
 	padding-left: 50%;
@@ -125,12 +125,10 @@ section#packages div.controls a {
 	display: inline-block;
 	vertical-align: top;
 	margin-right: 10px;
-	margin-left: 10px;
 	width: 15px;
 	height: 15px;
-	border: 2px solid @color_header;
+	border: 2px solid @color_ac_text;
 	border-radius: 50%;
-	box-shadow: 0px 0px 0px 1px @color_ac_text;
 	transition: 0.3s all;
 	cursor: pointer;
 }
