Content style: Fixed buy button padding.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -71,8 +71,8 @@ section#packages div.package a.buy {
 	display: inline-block;
 	vertical-align: middle;
 	margin-top: 1em;
-	padding-left: 25px;
-	padding-right: 25px;
+	padding: 1em;
+	padding-bottom: 0.7em;
 
 	border-radius: @button_border_radius;
 	border: 1px solid @color_ac_text;
@@ -80,7 +80,7 @@ section#packages div.package a.buy {
 
 	color: @color_header;
 	font-weight: 700;
-	line-height: 4.5em;
+	line-height: 100%;
 	text-decoration: none;
 
 	transition: all 0.3s;
