Content style: Fixed colors of SVG sprite on buy button.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -97,10 +97,8 @@ section#packages div.package a.buy svg {
 	margin-right: 10px;
 	width: 1.5em;
 	height: 1.5em;
-}
-
-section#packages div.package a.buy svg {
-	fill: blue;
+	fill: currentColor;
+	margin-top: -0.3em;
 }
 
 section#packages div.package.basic a.buy:hover {
