Header style: Optimized drop down menu.

--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -102,10 +102,7 @@ nav#main ul li > ul {
 	visibility: hidden;
 	opacity: 0;
 
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 10px;
-	padding-right: 10px;
+	padding: 5px;
 
 	border: 1px solid @color_header;
 	background-color: @color_ac_text;
@@ -118,6 +115,7 @@ nav#main ul li:hover ul {
 	visibility: visible;
 	opacity: 1;
 	max-height: 500px;
+	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
 }
 
 nav#main > ul > li:hover > a {
