Fixed phone link.

--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -148,6 +148,7 @@ nav#main ul ul li:hover a {
 }
 
 header > a.phone {
+	padding: 1em;
 	vertical-align: middle;
 	color: @color_header;
 	font-weight: 700;
