Style: fixed svg fill in login button

--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -90,6 +90,12 @@ nav#main > ul > li > a.login svg {
 	height: 1.5em;
 	vertical-align: middle;
 	margin-left: 10px;
+	fill: @color_special;
+	transition: all 0.3s;
+}
+
+nav#main > ul > li > a.login:hover svg {
+	fill: white;
 }
 
 
