--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -22,6 +22,7 @@
 @vertical_spacing: 50px;
 @small_vertical_spacing: 30px;
 @button_border_radius: 5px;
+@package_content_width: 550px;
 
 @import "header.less";
 @import "content.less";
