Added checkout page.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -226,3 +226,14 @@ section#features {
 	background-color: @color_features;
 	color: @color_features_text;
 }
+
+/**
+ * Checkout
+ */
+div#checkout_container h1,
+div#checkout_container h2,
+div#checkout_container h3,
+div#checkout_container h4,
+div#checkout_container h5 {
+	font-weight: 400;
+}
