--- a/site/templates/basic.xml
+++ b/site/templates/basic.xml
@@ -21,6 +21,15 @@
 				template="parts/package.xml"
 				cms:eval="uid"
 				/>
+			
+			<cms:module
+				name="articles"
+				action="show_group"
+				text_id="$action"
+				template="parts/group_features.xml"
+				cms:eval="text_id"
+			/>
+	
 
 			<!-- Footer -->
 			<cms:template file="parts/footer.xml"/>
